--- a/templates/base.html
+++ b/templates/base.html
@@ -1,23 +1,34 @@
 <!doctype html>
 <html>
     <head>
-        <title>{{title}}</title>
+            
         <style>
 
          </style>
     </head>
 <body>
+    
 
-    <div>
-        <a href='/blog'>Return to main page</a>
+    <div class="index">
+        <a href='/'>Return to main page</a>
     </div>
     <br> 
-    <div>
+    <div class="newpost">
         <a href='/newpost'>Create new post</a>
     </div>
-
+ 
+    {% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+  {% endwith %}
+    
     {% block content %}
-    {% endblock %}
-
+    {% endblock %} 
+    
 </body>
 </html> 
