log in and sign up working, but not sending info to database

--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -8,8 +8,9 @@
 
     <br>
 
-    <label for="blog_owner_id">Author</label>
-    <input name="blog_owner_id" type="text">
+    <label for="blog_owner_id">Author</label> <!--not an input, needs owner_id attached-->
+    <a href='/index?id={{author_blog.id}}'></a>
+    <!--<input name="blog_owner_id" type="text">-->
 
     <br>
 
