--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,4 +1,6 @@
+{% extends "base.html" %}
 
+{% block content %}
 <h1>Signup</h1>
 <form method="POST">
     <table>
@@ -43,3 +45,4 @@
         </label>
         <input type="submit">
 </form>  
+{% endblock %}
