--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,24 @@
-{{% extends "base.html" %}}
+{% extends "base.html" %}
 
-{{% block content %}}
+{% block content %}
 
 <!--displays list of user names-->
 
 <h1>Authors</h1>
 <form action="/index" method="POST">
-    
-</form> %---%---%---%---%--%---%---%---%---%---%---%---%---%---%---%---%---%
+</form> 
 
-{% if blogs|length==0 %} 
-<p>No blog posts yet...</p>
+{% if authors|length==0 %} 
+<p>No authors have posted yet.</p>
 {% else %}
-{% for new_blog in blogs %} <!--'blogs' is jinja variable that relates to 'full_blog' from main.py-->
+{% for new_author in authors %} <!--'blogs' is jinja variable that relates to 'full_blog' from main.py-->
 <div> 
-    <a href='/blog?id={{new_blog.id}}'> 
-        <h1>{{new_blog.title}}</h1> <!--was having issues w/ this not matching 'new_blog' above-->
-        <p>{{new_blog.entry}}</p>
+    <a href='/index?id={{new_author.id}}'> 
+        <h1>{{new_author.username}}</h1> <!--was having issues w/ this not matching 'new_blog' above-->
         </form>
         {% endfor %}
 </div>
 
 {% endif %}
 
-{{% endblock %}}
+{% endblock %}
