--- a/templates/login.html
+++ b/templates/login.html
@@ -1,22 +1,6 @@
-{{% extends "base.html" %}}
+{% extends "base.html" %}
 
-{{% block content %}}
-<nav>
-        <ul id="user-account">
-            <li><a href="/login">login</a></li>
-            <li><a href="/logout">logout</a></li>
-        </ul>
-        <ul>
-            <li><a href="/">home</a></li>
-            <li><a href="/blog">all posts</a></li>
-            <li><a href="/blog/newpost">new post</a></li>
-        </ul>
-    </nav>
-    <style>
-            .error {
-                color: red;
-            }
-        </style>
+{% block content %}
 
 <h1>Log in</h1>
 <p class="error"></p>
@@ -57,4 +41,4 @@
 </form>
 <p>Don't have an account? <a href="/signup">Create one!</a></p>
 
-{{% endblock %}}
+{% endblock %}
