more work done, user translate error when trying to make new blog

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
         </style>
     </head>
     <nav>
-        <ul id="user-account"><!--double check-->
+        <ul><!--double check-->
             <li><a href="/">home</a></li>
             <li><a href="/blog">all posts</a></li>
             <li><a href="/blog/newpost">new post</a></li>
