--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -9,7 +9,7 @@
     <br>
 
     <label for="blog_owner_id">Author</label> <!--not an input, needs owner_id attached-->
-    <a href='/index?id={{author_blog.id}}'></a>
+    <!--<needs to tie to signed in owner account>-->
     <!--<input name="blog_owner_id" type="text">-->
 
     <br>
