--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -8,7 +8,7 @@
 
     <br>
 
-    <label for="blog_owner_id">Author</label> <!--not an input, needs owner_id attached-->
+    <label for="blog_owner_id"></label> <!--not an input, needs owner_id attached-->
     <!--<needs to tie to signed in owner account>-->
     <!--<input name="blog_owner_id" type="text">-->
 
@@ -17,7 +17,7 @@
     <label for="add_entry">Add Blog entry</label>
     <textarea name="blog_entry"></textarea> 
     <input name="add_entry" type="submit"/>
-    
+
 </form>
 </body>
 {% endblock %}
