--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>This here is my blog</h1>
+<h1>Blogz</h1>
 <form action="/blog" method="POST">
     <label>
         
@@ -9,16 +9,18 @@
 </form> %---%---%---%---%--%---%---%---%---%---%---%---%---%---%---%---%---%
 
 {% if blogs|length==0 %} 
-<p>No blog posts yet...</p>
+<p>No authors posted yet.</p>
 {% else %}
-{% for new_blog in blogs %} <!--'blogs' is jinja variable that relates to 'full_blog' from main.py-->
+{% for author in blogs %} <!--'blogs' is jinja variable that relates to 'full_blog' from main.py-->
 <div> 
-    <a href='/blog?id={{new_blog.id}}'> 
-        <h1>{{new_blog.title}}</h1> <!--was having issues w/ this not matching 'new_blog' above-->
-        <p>{{new_blog.entry}}</p>
+    <a href='/blog?id={{author.id}}'> 
+        <h1>{{author.title}}</h1> <!--was having issues w/ this not matching 'new_blog' above-->
+    </a>
+    <p>{{author.entry}}</p>
+</div> 
         </form>
         {% endfor %}
-</div>
+
 
 {% endif %}
 
