--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     </head>
     <nav>
         <ul><!--double check-->
-            <li><a href="/">home</a></li>
+            <li><a href="/index">home</a></li>
             <li><a href="/blog">all posts</a></li>
             <li><a href="/newpost">new post</a></li>
         </ul>
