--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,13 @@
 <h1>Authors</h1>
 <form action="/index" method="POST">
 </form> 
-{% if blogs|length==0 %} 
+{% if user|length==0 %} 
 <p>No authors to list yet!</p>
 {% else %}
-{% for new_author in blogs %} <!--'blogs' is jinja variable that relates to 'full_blog' from main.py-->
+{% for new_author in user %} <!--'blogs' is jinja variable that relates to 'full_blog' from main.py-->
 <div> 
-    <a href='/index?id={{new_author.id}}'> 
-        <h1>{{new_author.owner}}</h1> <!--was having issues w/ this not matching 'new_blog' above-->
+    <a href='/author_posts?id={{new_author.id}}'> <!--/was'/index'-->
+        <h1>{{new_author.username}}</h1> <!--was having issues w/ this not matching 'new_blog' above-->
         {% endfor %}
 </div>
 
